# AInimotion

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  build.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
ainimotion/: __init__.py
ainimotion/cli/: __init__.py  enhance.py
ainimotion/data/: __init__.py  dataset.py  dataset_v5.py
ainimotion/gating/: __init__.py  classifier.py  gating.py  similarity.py
ainimotion/pipeline/: __init__.py  decoder.py  encoder.py  pipeline.py
ainimotion/training/: __init__.py  discriminator.py  losses.py  train.py
app/: __init__.py  __main__.py  main.py
app/core/: __init__.py  analysis_cache.py  frame_analysis.py  interpolator.py  processor.py  video_io.py
app/ui/: __init__.py  main_window.py  queue_item_widget.py  theme.py
archive/configs/: extended_training.yaml  finetune_training.yaml  interp_v2_training.yaml  probe_training.yaml  production_training.yaml
archive/scripts/: run_extended_probes.py  run_probes.py  test_adaptive.py
configs/: interp_training.yaml  interp_training_5090.yaml  interp_training_stable.yaml  interp_v3_training_5090.yaml  interp_v4_training_5090.yaml  train_v5.1_5090.yaml  train_v5_5090.yaml  twoweek_training.yaml
model/: best.pt
model/trt_cache/: TensorrtExecutionProvider_TRTKernel_graph_main_graph_18095703859084140350_0_0_fp16_sm120.profile
presentation/: AInimotion_Presentation.tex  AInimotion_Speaker_Notes.tex
runs/20260111_153412/: events.out.tfevents.1768174452.Travis_PC.24732.0
runs/20260111_155554/: events.out.tfevents.1768175754.Travis_PC.31232.0
runs/20260111_160336/: events.out.tfevents.1768176216.Travis_PC.10596.0
runs/20260113_205930/: events.out.tfevents.1768366770.Travis_PC.32896.0
runs/20260113_210206/: events.out.tfevents.1768366926.Travis_PC.9572.0
runs/20260115_101140/: events.out.tfevents.1768500700.TWhit.15420.0
runs/20260115_103552/: events.out.tfevents.1768502152.TWhit.6220.0
scripts/: analyze_triplets.py  balance_dataset.py  benchmark_vram_v2.py  compare_checkpoint.py  diagnostic_layers.py  download_papers.py  evaluate_visual.py  extract_sequences.py  extract_triplets.py  profile_v5_vram.py  run_all_overnight.ps1  run_clean.ps1  run_hardsubs.ps1  run_test.ps1  setup.py  sweep_v2.py  test_all.py  test_fixes.py  test_inference.py  train_v5.py  verify_setup.py
tests/: test_pipeline.py
(+54 files in other folders)
